@@ -125,3 +125,4 @@
 28-Mar-2022  - V1.34 Resolve pylint issues
  6-Jun-2022  - V1.35 Resolve pylint issues in FastaUtil
  8-Sep-2022  - V1.36 Resolve pylint issues
+ 3-Oct-2022  - V1.37 Add options to UrlRequestUtil
